--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "server.js",
   "author": {
     "name": ""
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   }
 }
