--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,15 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Bb]uild/
 
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+
+# Ignoring saved data
+data/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
