Added min number of cards for straights/flushes; figures out first-to-bet when it's by the best hand

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "esnext",
     "outDir": "./build",
+    "rootDir": "./src",
     "sourceMap": true,
     "watch": false
   }
