--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "url": "https://github.com/haggis22/poker"
   },
   "devDependencies": {
+    "@types/angular": "^1.7.2",
+    "@types/angular-ui-router": "^1.1.40",
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.2",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
