--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@types/node": "^14.6.2",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-angular-embed-templates": "^2.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "nodemon": "^2.0.4",
+    "sort-stream": "^1.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
