--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "poker",
   "main": "server.js",
   "author": {
-    "name": ""
+    "name": "Daniel Shell"
   },
   "scripts": {
     "start": "nodemon build/server/server",
     "build": "tsc",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -20,18 +22,28 @@
     "url": "https://github.com/haggis22/poker"
   },
   "devDependencies": {
-    "@types/angular": "^1.7.2",
-    "@types/angular-ui-router": "^1.1.40",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@types/express": "^4.17.7",
+    "@types/html-webpack-plugin": "^3.2.3",
     "@types/node": "^14.6.2",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
-    "gulp-angular-embed-templates": "^2.3.0",
-    "gulp-concat": "^2.6.1",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "html-webpack-plugin": "^4.4.1",
     "nodemon": "^2.0.4",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
     "sort-stream": "^1.0.1",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
