--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "ws": "^7.3.1"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.7",
     "@types/html-webpack-plugin": "^3.2.3",
     "@types/node": "^14.6.2",
+    "@types/ws": "^7.2.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "del": "^5.1.0",
