--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "typescript": "^4.0.2",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
