--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "CommonJS",
     "target": "esnext",
     "watch": false,
-    "allowJs": true,
+    "allowJs": true
     /*
     "baseUrl": "src",
     "paths": {
