--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# Ignoring app logging
+/logs/
+
 # Ignoring saved data
 data/
 
@@ -67,7 +70,6 @@ artifacts/
 *.tlh
 *.tmp
 *.tmp_proj
-*.log
 *.vspscc
 *.vssscc
 .builds
