--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/html-webpack-plugin": "^3.2.3",
     "@types/node": "^14.6.2",
     "@types/ws": "^7.2.6",
+    "@vue/cli": "^4.5.9",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "del": "^5.1.0",
