--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript": "^4.0.2",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
+    "vue-router": "^3.5.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
