--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "socket.io": "^2.3.0",
+    "uuid": "^3.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
@@ -29,6 +30,7 @@
     "url": "https://github.com/haggis22/poker"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
